fixed footer alignment

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,14 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Oooh+Baby&display=swap');
 
 .footer {
-  background: #F4F4F4;
+  background-color: white;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 100px;
-  padding: 0px 50px;
   color: rgba(0,0,0,0.3);
   box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
+}
+.footer-container{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: white;
+  width: 1000px;
+  height: 100px;
+  margin: 0 auto;
+  position: relative;
+  padding: 0;
 }
 .footer-copyright {
   font-family: 'Montserrat', sans-serif;
@@ -22,7 +32,8 @@
   opacity: 0.15;
   text-decoration: none;
   font-size: 24px;
-  padding: 0px 10px;
+  padding: 0px 20px;
+  padding-left: 0;
 }
 .footer-links a:hover {
   opacity: 1;
